# readmission-risk-ml

./: .dockerignore  .env.example  .gitignore  Dockerfile  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
reports/: fairness.csv
scripts/: inspect_clean.py  inspect_features.py  profile_raw.py
src/readmission_risk/: __init__.py
src/readmission_risk/common/: config.py
src/readmission_risk/data/: clean.py  ingest.py  loaders.py  split.py
src/readmission_risk/evaluation/: explain.py
src/readmission_risk/features/: build.py
src/readmission_risk/modeling/: baseline.py  calibrate.py  cv.py  gboost.py
src/readmission_risk/monitoring/: drift.py
src/readmission_risk/serving/: api.py
src/readmission_risk/validation/: schema.py
tests/: test_api.py  test_calibrate.py  test_clean.py  test_cv.py  test_drift.py  test_explain.py  test_features.py  test_gboost.py  test_schema.py  test_split.py
