[project]
name = "readmission-risk-ml"
version = "0.1.0"
description = "Prédiction de réadmission hospitalière à 30 jours (diabète) — projet ML/DS avec validation rigoureuse et MLOps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Étape 1 : socle data science ---
    "pandas>=2.2",            # manipulation tabulaire
    "numpy>=1.26",            # calcul numérique
    "scikit-learn>=1.5",      # modélisation, pipelines, validation
    "pyarrow>=16.0",          # lecture/écriture Parquet (format colonnaire)
    "pydantic-settings>=2.3", # configuration typée via .env
    "structlog>=24.1",        # logs structurés
    # --- Étape 2 : ingestion + validation ---
    "ucimlrepo>=0.0.7",       # téléchargement reproductible du dataset UCI
    "pandera>=0.20",          # schéma de validation (contrat de données)
    # --- Étape 5 : suivi d'expériences ---
    "mlflow>=2.14",           # tracking des runs (params, métriques, artefacts)
    # --- Étape 6 : gradient boosting + tuning ---
    "lightgbm>=4.3",          # modèle gradient boosting (rapide, tabulaire)
    "optuna>=3.6",            # optimisation bayésienne d'hyperparamètres
    # --- Étape 7 : calibration + conformal ---
    "mapie>=1.0",             # conformal prediction (ensembles à couverture garantie)
    "matplotlib>=3.8",        # courbe de calibration (reliability diagram)
    "joblib>=1.3",            # sérialisation du modèle final
]

[project.scripts]
readmission-ingest = "readmission_risk.data.ingest:main"
readmission-clean = "readmission_risk.data.clean:main"
readmission-train-baseline = "readmission_risk.modeling.baseline:main"
readmission-train-gboost = "readmission_risk.modeling.gboost:main"
readmission-calibrate = "readmission_risk.modeling.calibrate:main"

[dependency-groups]
dev = [
    "ruff>=0.5",      # linter + formatter
    "pytest>=8.2",    # tests
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

# On force le nom du module construit (le projet s'appelle readmission-risk-ml,
# mais notre paquet Python est readmission_risk).
[tool.uv.build-backend]
module-name = "readmission_risk"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
